--- a/src/components/MainPage/style/Footer.css
+++ b/src/components/MainPage/style/Footer.css
@@ -3,34 +3,21 @@
   position: relative;
   z-index: 1;
   flex-shrink: 0;
-}
-
-.footer-container div {
   background-color: #0c151d;
 }
 
-.footer-container div div {
-  position: relative;
-  width: 100%;
-  height: auto;
-}
-
-.footer-container div div footer {
-  width: 100%;
-}
-
-.footer-container div div footer .links {
+.footer-container .links {
   background: #1b252e none repeat scroll 0% 0%;
   position: relative;
   width: 100%;
 }
 
-.footer-container div div footer .links div {
-  margin: 0px auto !important;
+.footer-container .links div {
   max-width: 936px;
+  margin: 0px auto !important;
 }
 
-.footer-container div div footer .links div div {
+.footer-container .links div div {
   margin: 84px auto 0px;
   max-width: none;
   display: flex;
@@ -39,7 +26,7 @@
   width: 100%;
 }
 
-.footer-container div div footer .links div div .siteLinks {
+.footer-container .links div div .siteLinks {
   text-align: left;
   flex-flow: row wrap;
   justify-content: left;
@@ -47,13 +34,13 @@
   display: flex;
 }
 
-.footer-container div div footer .links div div .siteLinks div {
+.footer-container .links div div .siteLinks div {
   padding: 10px 0px;
   text-align: left;
   width: 50%;
 }
 
-.footer-container div div footer .links div div .siteLinks div a {
+.footer-container .links div div .siteLinks div a {
   color: white;
   text-decoration: none;
   font-size: 14px;
@@ -63,7 +50,8 @@
   text-align: left;
 }
 
-.footer-container div div footer .links div div .socialLinks {
+.footer-container .links div div .socialLinks {
+  width: auto;
   padding-top: 0px;
   border-top: unset;
   max-width: unset;
@@ -73,7 +61,7 @@
   justify-content: space-between;
 }
 
-.footer-container div div footer .links div div .socialLinks .invite {
+.footer-container .links div div .socialLinks .invite {
   margin-top: 0px;
   padding: 0px;
   align-self: flex-start;
@@ -81,7 +69,7 @@
   color: white;
 }
 
-.footer-container div div footer .links div div .socialLinks .invite button {
+.footer-container .links div div .socialLinks .invite button {
   max-width: 100%;
   min-height: 42px;
   padding: 0;
@@ -111,7 +99,7 @@
   background-color: transparent;
 }
 
-.footer-container div div footer .links div div .socialLinks .invite button span {
+.footer-container .links div div .socialLinks .invite button span {
   white-space: nowrap;
   width: 100%;
   display: inherit;
@@ -119,16 +107,16 @@
   justify-content: inherit;
 }
 
-.footer-container div div footer .links div div .socialLinks .invite button span div {
+.footer-container .links div div .socialLinks .invite button span div {
   padding: 0px 0px 0px 8px;
 }
 
-.footer-container div div footer .links div div .socialLinks .invite button span div div {
+.footer-container .links div div .socialLinks .invite button span div div {
   height: 20px;
   width: 20px;
 }
 
-.footer-container div div footer .links div div .socialLinks .invite button span div div svg {
+.footer-container .links div div .socialLinks .invite button span div div svg {
   height: 20px;
   width: 20px;
   pointer-events: none;
@@ -139,18 +127,14 @@
   flex-shrink: 0;
 }
 
-.footer-container div div footer .links div div .socialLinks .socialMedia {
+.footer-container .links div div .socialLinks .socialMedia {
   padding: 0px;
   align-self: flex-end;
   display: flex;
   justify-content: center;
 }
 
-.footer-container div div footer .links div div .socialLinks .socialMedia div {
-  padding: 14px 28px 14px 0px;
-}
-
-.footer-container div div footer .links div div .socialLinks .socialMedia div a {
+.footer-container .links div div .socialLinks .socialMedia div a {
   color: #0d4696;
   text-decoration: none;
   font-size: 14px;
@@ -159,12 +143,12 @@
   line-height: 21px;
 }
 
-.footer-container div div footer .links div div .socialLinks .socialMedia div a div {
+.footer-container .links div div .socialLinks .socialMedia div a div {
   height: 24px;
   width: 24px;
 }
 
-.footer-container div div footer .links div div .socialLinks .socialMedia div a div svg {
+.footer-container .links div div .socialLinks .socialMedia div a div svg {
   fill: #fff;
   height: 24px;
   width: 24px;
