--- a/src/components/MainPage/style/Footer.scss
+++ b/src/components/MainPage/style/Footer.scss
@@ -3,168 +3,153 @@
   position: relative;
   z-index: 1;
   flex-shrink: 0;
+  background-color: #0c151d;
 
-  div {
-    background-color: #0c151d;
+  .links {
+    background: rgb(27, 37, 46) none repeat scroll 0% 0%;
+    position: relative;
+    width: 100%;
 
     div {
-      position: relative;
-      width: 100%;
-      height: auto;
+      max-width: 936px;
+      margin: 0px auto !important;
 
-      footer {
+      div {
+        margin: 84px auto 0px;
+        max-width: none;
+        display: flex;
+        flex-direction: row;
+        padding: 16px 0px;
         width: 100%;
 
-        .links {
-          background: rgb(27, 37, 46) none repeat scroll 0% 0%;
-          position: relative;
-          width: 100%;
+        .siteLinks {
+          text-align: left;
+          flex-flow: row wrap;
+          justify-content: left;
+          flex: 1 1 auto;
+          display: flex;
 
           div {
-            margin: 0px auto !important;
-            max-width: 936px;
+            padding: 10px 0px;
+            text-align: left;
+            width: 50%;
 
-            div {
-              margin: 84px auto 0px;
-              max-width: none;
-              display: flex;
-              flex-direction: row;
-              padding: 16px 0px;
+            a {
+              color: white;
+              text-decoration: none;
+              font-size: 14px;
+              font-weight: 500;
+              cursor: pointer;
+              line-height: 21px;
+              text-align: left;
+            }
+          }
+        }
+
+        .socialLinks {
+          width: auto;
+          padding-top: 0px;
+          border-top: unset;
+          max-width: unset;
+          display: flex;
+          flex-direction: column;
+          -moz-box-pack: justify;
+          justify-content: space-between;
+          // width: 204px;
+
+          .invite {
+            margin-top: 0px;
+            padding: 0px;
+            align-self: flex-start;
+            text-align: left;
+            color: rgb(255, 255, 255);
+
+            button {
+              max-width: 100%;
+              min-height: 42px;
+              padding: 0;
+              text-align: center;
+              font-weight: 600;
+              line-height: 1.3;
+              white-space: normal;
+              border-radius: 0;
+              letter-spacing: 1px;
               width: 100%;
+              font-size: 0.8125rem;
+              color: inherit;
+              border-color: currentColor;
+              min-width: 64px;
+              box-sizing: border-box;
+              transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+                  0ms,
+                box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+                border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+              border: 0;
+              cursor: pointer;
+              margin: 0;
+              display: inline-flex;
+              outline: 0;
+              position: relative;
+              align-items: center;
+              vertical-align: middle;
+              justify-content: center;
+              text-decoration: none;
+              background-color: transparent;
 
-              .siteLinks {
-                text-align: left;
-                flex-flow: row wrap;
-                justify-content: left;
-                flex: 1 1 auto;
-                display: flex;
+              span {
+                white-space: nowrap;
+                width: 100%;
+                display: inherit;
+                align-items: inherit;
+                justify-content: inherit;
 
                 div {
-                  padding: 10px 0px;
-                  text-align: left;
-                  width: 50%;
+                  padding: 0px 0px 0px 8px;
 
-                  a {
-                    color: white;
-                    text-decoration: none;
-                    font-size: 14px;
-                    font-weight: 500;
-                    cursor: pointer;
-                    line-height: 21px;
-                    text-align: left;
+                  div {
+                    height: 20px;
+                    width: 20px;
+
+                    svg {
+                      height: 20px;
+                      width: 20px;
+                      pointer-events: none;
+                      fill: currentColor;
+                      display: inline-block;
+                      font-size: 1.5rem;
+                      transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+                      flex-shrink: 0;
+                    }
                   }
                 }
               }
+            }
+          }
 
-              .socialLinks {
-                padding-top: 0px;
-                border-top: unset;
-                max-width: unset;
-                display: flex;
-                flex-direction: column;
-                -moz-box-pack: justify;
-                justify-content: space-between;
-                // width: 204px;
+          .socialMedia {
+            padding: 0px;
+            align-self: flex-end;
+            display: flex;
+            justify-content: center;
 
-                .invite {
-                  margin-top: 0px;
-                  padding: 0px;
-                  align-self: flex-start;
-                  text-align: left;
-                  color: rgb(255, 255, 255);
+            div {
+              a {
+                color: rgb(13, 70, 150);
+                text-decoration: none;
+                font-size: 14px;
+                font-weight: 400;
+                cursor: pointer;
+                line-height: 21px;
 
-                  button {
-                    max-width: 100%;
-                    min-height: 42px;
-                    padding: 0;
-                    text-align: center;
-                    font-weight: 600;
-                    line-height: 1.3;
-                    white-space: normal;
-                    border-radius: 0;
-                    letter-spacing: 1px;
-                    width: 100%;
-                    font-size: 0.8125rem;
-                    color: inherit;
-                    border-color: currentColor;
-                    min-width: 64px;
-                    box-sizing: border-box;
-                    transition: background-color 250ms
-                        cubic-bezier(0.4, 0, 0.2, 1) 0ms,
-                      box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
-                      border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-                    border: 0;
-                    cursor: pointer;
-                    margin: 0;
-                    display: inline-flex;
-                    outline: 0;
-                    position: relative;
-                    align-items: center;
-                    vertical-align: middle;
-                    justify-content: center;
-                    text-decoration: none;
-                    background-color: transparent;
+                div {
+                  height: 24px;
+                  width: 24px;
 
-                    span {
-                      white-space: nowrap;
-                      width: 100%;
-                      display: inherit;
-                      align-items: inherit;
-                      justify-content: inherit;
-
-                      div {
-                        padding: 0px 0px 0px 8px;
-
-                        div {
-                          height: 20px;
-                          width: 20px;
-
-                          svg {
-                            height: 20px;
-                            width: 20px;
-                            pointer-events: none;
-                            fill: currentColor;
-                            display: inline-block;
-                            font-size: 1.5rem;
-                            transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1)
-                              0ms;
-                            flex-shrink: 0;
-                          }
-                        }
-                      }
-                    }
-                  }
-                }
-
-                .socialMedia {
-                  padding: 0px;
-                  align-self: flex-end;
-                  display: flex;
-                  justify-content: center;
-
-                  div {
-                    padding: 14px 28px 14px 0px;
-
-                    a {
-                      color: rgb(13, 70, 150);
-                      text-decoration: none;
-                      font-size: 14px;
-                      font-weight: 400;
-                      cursor: pointer;
-                      line-height: 21px;
-
-                      div {
-                        height: 24px;
-                        width: 24px;
-
-                        svg {
-                          fill: #fff;
-                          height: 24px;
-                          width: 24px;
-                          pointer-events: none;
-                        }
-                      }
-                    }
+                  svg {
+                    fill: #fff;
+                    height: 24px;
+                    width: 24px;
+                    pointer-events: none;
                   }
                 }
               }
