--- a/src/components/MainPage/style/PopularCuisines.css
+++ b/src/components/MainPage/style/PopularCuisines.css
@@ -1,1 +1,77 @@
-/* No CSS */
+.popularcuisines-container {
+  min-height: 391.6px;
+  background-color: #f9fafb;
+}
+
+.popularcuisines-container div {
+  padding: 64px 0px;
+  position: relative;
+  margin: 0px auto;
+  width: 100%;
+  max-width: 920px;
+}
+
+.popularcuisines-container div h6 {
+  padding: 32px 0px 25px;
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  justify-content: space-between;
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 1.3;
+  letter-spacing: 0.5px;
+  margin: 0;
+}
+
+.popularcuisines-container div ul {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  border-radius: 4px;
+  margin: 0px;
+  position: relative;
+  list-style: outside none none;
+  transition: transform 500ms cubic-bezier(1, 0, 0, 1) 0s;
+  display: flex;
+  padding-left: 0;
+}
+
+.popularcuisines-container div ul li {
+  margin: 0px 2px;
+  padding: 2px 0px 0px 2px;
+  cursor: pointer;
+  list-style: outside none none;
+}
+
+.popularcuisines-container div ul li a div {
+  border-radius: 4px;
+  max-height: 142px;
+  width: 224px;
+  background-size: cover;
+  background-color: #0a3847;
+  background-repeat: no-repeat;
+  background-position: center center;
+  position: relative;
+}
+
+.popularcuisines-container div ul li a div p {
+  left: 16px;
+  font-size: 16px;
+  line-height: 19px;
+  max-height: 38px;
+  width: 180px;
+  position: absolute;
+  bottom: 12px;
+  color: white;
+  font-weight: 600;
+  margin: 0px;
+  text-align: left;
+  overflow: hidden;
+}
+
+.popularcuisines-container div ul li a div div {
+  background: rgba(0, 0, 0, 0) linear-gradient(rgba(255, 255, 255, 0) 15%, rgba(0, 0, 0, 0.6) 100%) repeat scroll 0% 0%;
+  position: absolute;
+  width: 100%;
+}
