--- a/src/components/MainPage/style/Cards copy.scss
+++ b/src/components/MainPage/style/Cards copy.scss
@@ -2,17 +2,17 @@
   background-color: #f9fafb;
 
   .cards-wrapper {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(288px, 314px));
-    grid-gap: 2rem;
+    display: flex;
     justify-content: center;
 
-    @media screen and (max-width: 600px) {
-      grid-template-columns: 1fr;
+    @media screen and (max-width: 960px) {
+      flex-direction: column;
+      align-items: center;
+      padding-bottom: 20px;
     }
 
     .card-wrapper {
-      margin: 64px 0;
+      margin: 64px 16px;
       text-align: left;
 
       @media screen and (max-width: 960px) {
@@ -20,24 +20,38 @@
       }
 
       .card {
+        flex-direction: column;
+        max-width: 314px;
         border-radius: 8px;
         background-color: #fff;
         overflow: hidden;
+        position: relative;
 
         @media screen and (max-width: 600px) {
+          max-width: 100%;
           border-radius: 0;
         }
 
         .image-wrapper {
+          border-radius: 8px 8px 0 0;
           width: 100%;
           height: 180px;
+          position: relative;
           clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
+
+          @media screen and (max-width: 600px) {
+            border-radius: 0;
+          }
 
           img {
             width: 100%;
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center bottom;
+
+            @media screen and (max-width: 600px) {
+              // width: 100;
+            }
           }
         }
 
@@ -68,6 +82,8 @@
           }
 
           p {
+            max-width: 100%;
+            transition: none;
             color: #5e6b77;
             font-size: 14px;
             font-weight: 400;
@@ -86,6 +102,8 @@
           padding-bottom: 0;
           border: 0;
           cursor: pointer;
+          align-items: center;
+          justify-content: center;
           background-color: transparent;
 
           &:hover {
