--- a/src/components/MainPage/style/Hero.css
+++ b/src/components/MainPage/style/Hero.css
@@ -1,7 +1,7 @@
 .hero-container {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   height: 100vh;
+  justify-items: center;
 }
 
 .hero-container .backgroundImage {
@@ -29,6 +29,13 @@
   transform: translateY(-50px);
 }
 
+@media screen and (max-width: 960px) {
+  .hero-container .centerMenu {
+    margin: auto;
+    padding: 10px;
+  }
+}
+
 .hero-container .centerMenu .text {
   text-shadow: rgba(23, 32, 38, 0.2) 0px 2px 10px, rgba(23, 32, 38, 0.2) 0px 2px 4px;
   pointer-events: none;
@@ -49,6 +56,12 @@
   line-height: 1.3;
   letter-spacing: 0.5px;
   margin: 0;
+}
+
+@media screen and (max-width: 960px) {
+  .hero-container .centerMenu .text h1 {
+    font-size: 32px;
+  }
 }
 
 .hero-container .centerMenu .searchMenu {
