--- a/src/components/MainPage/style/Hero.css
+++ b/src/components/MainPage/style/Hero.css
@@ -7,17 +7,12 @@
 .hero-container .backgroundImage {
   height: 100vh;
   width: 100%;
-  top: 0px;
-  left: 0px;
-  right: 0px;
-  right: 0px;
   object-fit: cover;
   position: absolute;
   overflow: hidden;
   opacity: 1;
   transform: scale(1);
   transform-origin: center center 0px;
-  transition: opacity 1s ease-in-out 0s;
 }
 
 .hero-container .centerMenu {
@@ -26,40 +21,29 @@
   margin: auto;
   width: 100%;
   max-width: 830px;
-  transform: translateY(-50px);
 }
 
 @media screen and (max-width: 960px) {
   .hero-container .centerMenu {
-    margin: auto;
-    padding: 10px;
+    width: 90vw;
   }
 }
 
-.hero-container .centerMenu .text {
-  text-shadow: rgba(23, 32, 38, 0.2) 0px 2px 10px, rgba(23, 32, 38, 0.2) 0px 2px 4px;
-  pointer-events: none;
-  margin-bottom: 20px;
-  position: relative;
-  z-index: 2;
-  padding: 20px;
-}
-
-.hero-container .centerMenu .text h1 {
+.hero-container .centerMenu h1 {
   font-weight: 600;
-  max-width: 100%;
   color: white;
-  text-transform: uppercase;
-  margin-bottom: 0.35em;
   text-align: center;
   font-size: 56px;
   line-height: 1.3;
   letter-spacing: 0.5px;
-  margin: 0;
+  text-shadow: rgba(23, 32, 38, 0.2) 0px 2px 10px, rgba(23, 32, 38, 0.2) 0px 2px 4px;
+  margin-bottom: 20px;
+  z-index: 2;
+  padding: 20px;
 }
 
 @media screen and (max-width: 960px) {
-  .hero-container .centerMenu .text h1 {
+  .hero-container .centerMenu h1 {
     font-size: 32px;
   }
 }
@@ -73,7 +57,13 @@
   position: relative;
 }
 
-.hero-container .centerMenu .searchMenu div .searchIcon {
+@media screen and (max-width: 960px) {
+  .hero-container .centerMenu .searchMenu {
+    height: 60px;
+  }
+}
+
+.hero-container .centerMenu .searchMenu .searchIcon {
   cursor: pointer;
   pointer-events: none;
   position: absolute;
@@ -88,6 +78,13 @@
   width: 36px;
 }
 
+@media screen and (max-width: 960px) {
+  .hero-container .centerMenu .searchMenu .searchIcon {
+    height: 26px;
+    width: 26px;
+  }
+}
+
 .hero-container .centerMenu .searchMenu form input {
   font-weight: 500;
   font-size: 20px;
@@ -97,48 +94,50 @@
   color: #162028;
   overflow: hidden;
   outline: 0;
-  padding: 0 100px 0 74px;
+  padding: 0 0 0 74px;
   text-overflow: ellipsis;
-  width: 100%;
   background: transparent;
   min-height: 72px;
 }
 
-.hero-container .centerMenu .searchMenu .currentLocation {
-  align-items: center;
+@media screen and (max-width: 960px) {
+  .hero-container .centerMenu .searchMenu form input {
+    font-size: 14px;
+    padding: 0 0 0 54px;
+  }
+}
+
+.hero-container .centerMenu .searchMenu button {
+  border: 0;
+  cursor: pointer;
+  display: inline-flex;
+  background-color: transparent;
   border-left: 1px solid #f1f2f4;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
   justify-content: center;
+  align-items: center;
   position: absolute;
-  margin: auto 0;
   top: 0;
   bottom: 0;
   right: 0;
   width: 76px;
 }
 
-.hero-container .centerMenu .searchMenu .currentLocation button {
-  max-width: 100%;
-  min-height: 42px;
-  min-width: 64px;
-  width: 100%;
-  height: 100%;
-  border: 0;
-  cursor: pointer;
-  display: inline-flex;
-  outline: 0;
-  padding: 0;
-  align-items: center;
-  justify-content: center;
-  background-color: transparent;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+@media screen and (max-width: 960px) {
+  .hero-container .centerMenu .searchMenu button {
+    width: 48px;
+  }
 }
 
-.hero-container .centerMenu .searchMenu .currentLocation button .currentIcon {
+.hero-container .centerMenu .searchMenu button svg {
   height: 36px;
   width: 36px;
+}
+
+@media screen and (max-width: 960px) {
+  .hero-container .centerMenu .searchMenu button svg {
+    height: 26px;
+    width: 26px;
+  }
 }
 
 .hero-container .centerMenu .findRestaurantsInYourArea :hover {
