--- a/src/components/MainPage/style/Hero.scss
+++ b/src/components/MainPage/style/Hero.scss
@@ -1,6 +1,4 @@
 .hero-container {
-  // display: flex;
-  // flex-direction: column;
   display: grid;
   height: 100vh;
   justify-items: center;
@@ -8,17 +6,12 @@
   .backgroundImage {
     height: 100vh;
     width: 100%;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    right: 0px;
     object-fit: cover;
     position: absolute;
     overflow: hidden;
     opacity: 1;
     transform: scale(1);
     transform-origin: center center 0px;
-    transition: opacity 1s ease-in-out 0s;
   }
 
   .centerMenu {
@@ -27,38 +20,26 @@
     margin: auto;
     width: 100%;
     max-width: 830px;
-    transform: translateY(-50px);
 
     @media screen and (max-width: 960px) {
-      margin: auto;
-      padding: 10px;
+      width: 90vw;
     }
 
-    .text {
+    h1 {
+      font-weight: 600;
+      color: rgb(255, 255, 255);
+      text-align: center;
+      font-size: 56px;
+      line-height: 1.3;
+      letter-spacing: 0.5px;
       text-shadow: rgba(23, 32, 38, 0.2) 0px 2px 10px,
         rgba(23, 32, 38, 0.2) 0px 2px 4px;
-      pointer-events: none;
       margin-bottom: 20px;
-      // padding: 0px 50px;
-      position: relative;
       z-index: 2;
       padding: 20px;
 
-      h1 {
-        font-weight: 600;
-        max-width: 100%;
-        color: rgb(255, 255, 255);
-        text-transform: uppercase;
-        margin-bottom: 0.35em;
-        text-align: center;
-        font-size: 56px;
-        line-height: 1.3;
-        letter-spacing: 0.5px;
-        margin: 0;
-
-        @media screen and (max-width: 960px) {
-          font-size: 32px;
-        }
+      @media screen and (max-width: 960px) {
+        font-size: 32px;
       }
     }
 
@@ -70,20 +51,27 @@
       height: 72px;
       position: relative;
 
-      div {
-        .searchIcon {
-          cursor: pointer;
-          pointer-events: none;
-          position: absolute;
-          margin: auto 0;
-          left: 0;
-          top: 0;
-          bottom: 0;
-          height: 36px;
-          padding-left: 16px;
-          padding-right: 19px;
-          height: 36px;
-          width: 36px;
+      @media screen and (max-width: 960px) {
+        height: 60px;
+      }
+
+      .searchIcon {
+        cursor: pointer;
+        pointer-events: none;
+        position: absolute;
+        margin: auto 0;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        height: 36px;
+        padding-left: 16px;
+        padding-right: 19px;
+        height: 36px;
+        width: 36px;
+
+        @media screen and (max-width: 960px) {
+          height: 26px;
+          width: 26px;
         }
       }
 
@@ -97,48 +85,44 @@
           color: #162028;
           overflow: hidden;
           outline: 0;
-          padding: 0 100px 0 74px;
+          padding: 0 0 0 74px;
           text-overflow: ellipsis;
-          width: 100%;
+          // width: 100%;
           background: transparent;
           min-height: 72px;
+
+          @media screen and (max-width: 960px) {
+            font-size: 14px;
+            padding: 0 0 0 54px;
+          }
         }
       }
-      .currentLocation {
-        align-items: center;
+
+      button {
+        border: 0;
+        cursor: pointer;
+        display: inline-flex;
+        background-color: transparent;
         border-left: 1px solid #f1f2f4;
-        display: flex;
-        flex-direction: column;
-        height: 100%;
         justify-content: center;
+        align-items: center;
         position: absolute;
-        margin: auto 0;
         top: 0;
         bottom: 0;
         right: 0;
         width: 76px;
 
-        button {
-          max-width: 100%;
-          min-height: 42px;
-          min-width: 64px;
-          width: 100%;
-          height: 100%;
-          border: 0;
-          cursor: pointer;
-          display: inline-flex;
-          outline: 0;
-          padding: 0;
-          align-items: center;
-          justify-content: center;
-          background-color: transparent;
-          transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
-            box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
-            border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+        @media screen and (max-width: 960px) {
+          width: 48px;
+        }
 
-          .currentIcon {
-            height: 36px;
-            width: 36px;
+        svg {
+          height: 36px;
+          width: 36px;
+
+          @media screen and (max-width: 960px) {
+            height: 26px;
+            width: 26px;
           }
         }
       }
